完善app任务task执行库

--- a/Read/ReadJavaWiki/01.Java基础/04.整型数据深入分析.md
+++ b/Read/ReadJavaWiki/01.Java基础/04.整型数据深入分析.md
@@ -237,7 +237,7 @@
 #### 3.2 装箱和拆箱是如何实现的
 - 以Integer类为例，下面看一段代码来了解装箱和拆箱的实现
     ``` java
-    public class Main {
+    public class Foo {
         public static void main(String[] args) {
             Integer i = 10;
             int c = i;
@@ -245,13 +245,33 @@
     }
     ```
 - 然后来编译一下，看下图所示：
+    ``` java
+    public class Foo {
+      public Foo();
+        Code:
+           0: aload_0
+           1: invokespecial #1                  // Method java/lang/Object."<init>":()V
+           4: return
+    
+      public static void main(java.lang.String[]);
+        Code:
+           0: bipush        10
+           2: invokestatic  #2                  // Method java/lang/Integer.valueOf:(I)Ljava/lang/Integer;
+           5: astore_1
+           6: aload_1
+           7: invokevirtual #3                  // Method java/lang/Integer.intValue:()I
+          10: istore_2
+          11: return
+    }
+    ```
     - 从反编译得到的字节码内容可以看出，在装箱的时候自动调用的是Integer的valueOf(int)方法。而在拆箱的时候自动调用的是Integer的intValue方法。
     - 因此可以用一句话总结装箱和拆箱的实现过程：装箱过程是通过调用包装器的valueOf方法实现的，而拆箱过程是通过调用包装器的 xxxValue 方法实现的。（xxx代表对应的基本数据类型）。
 
 
 
 #### 3.3 装箱和拆箱在编程实际中注意点
-- 建议避免无意中的装箱、拆箱行为，尤其是在性能敏感的场合，创建 10 万个 Java 对象和 10 万个整数的开销可不是一个数量级的，不管是内存使用还是处理速度，光是对象头的空间占用就已经是数量级的差距了。
+- 建议避免无意中的装箱、拆箱行为
+    - 尤其是在性能敏感的场合，创建 10 万个 Java 对象和 10 万个整数的开销可不是一个数量级的，不管是内存使用还是处理速度，光是对象头的空间占用就已经是数量级的差距了。
 
 
 ### 04.原始类型线程安全问题
@@ -324,8 +344,7 @@
     //期望输出10000，最后输出的是10000
     //注意：打印日志----: 10000
     
-    
-    
+
     //AtomicInteger使用了volatile关键字进行修饰，使得该类可以满足线程安全。
     private volatile int value;
     /**
