--- a/Read/ReadJavaWiki/01.Java基础/05.String深入理解.md
+++ b/Read/ReadJavaWiki/01.Java基础/05.String深入理解.md
@@ -117,6 +117,7 @@
 - 我们一般并不会用到过长的字符串，但是实际上String可存储字符串的长度是有约束的，问题来了：最长是多少？为什么？
 - 看到问题的第一闪念就是打开源码，找一找有无长度限制代码。很抱歉，那是没有的。然后区分一下字符串的类型，字面量与变量，jvm 对这两者有着截然不同的处理方式。
 
+
 #### 7.1 字面量
 - 字面量我的理解就是在程序编译之前就一定指定了值的变量，当然只能限定于基本类型以及字符串，代码中一般是这样的：String s = "字面量";int a = 100;
 - JVM 的对字面量的处理
@@ -134,14 +135,12 @@
 
 
 ### 08.String对+重载做了什么
-#### 8.1字符串拼接
+#### 8.1 字符串拼接
 - 字符串拼接是我们在Java代码中比较经常要做的事情，就是把多个字符串拼接到一起。我们都知道，**String是Java中一个不可变的类**，所以他一旦被实例化就无法被修改。
 - 不可变类的实例一旦创建，其成员变量的值就不能被修改。这样设计有很多好处，比如可以缓存hashcode、使用更加便利以及更加安全等。
 
 
-
-
-### 02.使用`+`拼接字符串
+#### 8.2 使用`+`拼接字符串
 - 在Java中，拼接字符串最简单的方式就是直接使用符号`+`来拼接。如：
     ```
     String wechat = "Hollis";
@@ -175,8 +174,10 @@
     String str = str1 + str2;
     System.out.println(str);
     ```
-- 由于字符串拼接太常用了，java才支持可以直接用+号对两个字符串进行拼接。**其真正实现的原理是中间通过建立临时的StringBuilder对象，然后调用append方法实现**。如何验证呢？
-上述代码文件写在Test.java main方法中，使用<b>javac Test.java</b>编译，在执行<b>javap -verbose Test</b>，可以看到如下信息：
+- 由于字符串拼接太常用了，java才支持可以直接用+号对两个字符串进行拼接。
+    - **其真正实现的原理是中间通过建立临时的StringBuilder对象，然后调用append方法实现**。
+- 如何验证呢？
+    - 上述代码文件写在Test.java main方法中，使用<b>javac Test.java</b>编译，在执行<b>javap -verbose Test</b>，可以看到如下信息：
     ```
     0: ldc           #2                  // String 111111
     2: astore_1
