--- a/Read/ReadJavaWiki/11.Java并发/02.多线程并发案例.md
+++ b/Read/ReadJavaWiki/11.Java并发/02.多线程并发案例.md
@@ -10,16 +10,6 @@
 
 
 
-
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
-
-
-
-
-
 ### 01.继承Thread类的方式卖电影票案例
 - 代码如下所示
     ``` java
@@ -67,80 +57,80 @@
 
 ### 02.实现Runnable接口的方式卖电影票
 - 代码如下所示，假设有三个窗口
-```
-public class SellTicektesDemo {
-	public static void main(String[] args) {
-		// 创建SellTicektes对象
-		SellTicektes st = new SellTicektes() ;
-		// 创建Thread对象
-		Thread t1 = new Thread(st , "窗口1") ;
-		Thread t2 = new Thread(st , "窗口2") ;
-		Thread t3 = new Thread(st , "窗口3") ;
-		// 启动线程
-		t1.start() ;
-		t2.start() ;
-		t3.start() ;
-	}
-}
-
-public class SellTicektes implements Runnable {
-	private static int num = 100 ;
-	@Override
-	public void run() {
-		while(true) {
-			if(num > 0) {
-				System.out.println(Thread.currentThread().getName() + "正在出售第" + (num--) + "张票");
-			}
-		}
-	}
-}
-```
+    ```
+    public class SellTicektesDemo {
+        public static void main(String[] args) {
+            // 创建SellTicektes对象
+            SellTicektes st = new SellTicektes() ;
+            // 创建Thread对象
+            Thread t1 = new Thread(st , "窗口1") ;
+            Thread t2 = new Thread(st , "窗口2") ;
+            Thread t3 = new Thread(st , "窗口3") ;
+            // 启动线程
+            t1.start() ;
+            t2.start() ;
+            t3.start() ;
+        }
+    }
+    
+    public class SellTicektes implements Runnable {
+        private static int num = 100 ;
+        @Override
+        public void run() {
+            while(true) {
+                if(num > 0) {
+                    System.out.println(Thread.currentThread().getName() + "正在出售第" + (num--) + "张票");
+                }
+            }
+        }
+    }
+    ```
 
 ### 03.买电影票出现了同票和负数票的原因分析
 - 讲解过电影院售票程序，从表面上看不出什么问题，但是在真实生活中，售票时网络是不能实时传输的，总是存在延迟的情况，所以，在出售一张票以后，需要一点时间的延迟。改实现接口方式的卖票程序,每次卖票延迟100毫秒
-```
-public class ThreadDemo {
-	public static void main(String[] args) {
-		// 创建3个线程对象
-		SellTicktes t1 = new SellTicktes() ;
-		SellTicktes t2 = new SellTicktes() ;
-		SellTicktes t3 = new SellTicktes() ;
-		// 设置名称
-		t1.setName("窗口1") ;
-		t2.setName("窗口2") ;
-		t3.setName("窗口3") ;
-		// 启动线程
-		t1.start() ;
-		t2.start() ;
-		t3.start() ;
-	}
-}
-
-public class SellTicktes extends Thread {
-	private static int num = 100 ;
-	@Override
-	public void run() {
-		// 模拟售票
-		while(true) {
-			if( num > 0 ) {
-				try {
-					Thread.sleep(100) ;
-				} catch (InterruptedException e) {
-					e.printStackTrace();
-				}
-				System.out.println(Thread.currentThread().getName() + "正在出售" + (num--) + "张票");
-			}
-		}
-	}
-}
-```
+    ``` java
+    public class ThreadDemo {
+        public static void main(String[] args) {
+            // 创建3个线程对象
+            SellTicktes t1 = new SellTicktes() ;
+            SellTicktes t2 = new SellTicktes() ;
+            SellTicktes t3 = new SellTicktes() ;
+            // 设置名称
+            t1.setName("窗口1") ;
+            t2.setName("窗口2") ;
+            t3.setName("窗口3") ;
+            // 启动线程
+            t1.start() ;
+            t2.start() ;
+            t3.start() ;
+        }
+    }
+    
+    public class SellTicktes extends Thread {
+        private static int num = 100 ;
+        @Override
+        public void run() {
+            // 模拟售票
+            while(true) {
+                if( num > 0 ) {
+                    try {
+                        Thread.sleep(100) ;
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                    System.out.println(Thread.currentThread().getName() + "正在出售" + (num--) + "张票");
+                }
+            }
+        }
+    }
+    ```
 
 
 ### 04.线程安全问题的产生原因分析
--  首先想为什么出现问题?
-    -  是否是多线程环境，是否有共享数据，是否有多条语句操作共享数据
+- 首先想为什么出现问题?
+    - 是否是多线程环境，是否有共享数据，是否有多条语句操作共享数据
 -  如何解决多线程安全问题呢?
-    -  基本思想：让程序没有安全问题的环境。怎么实现呢?把多个语句操作共享数据的代码给锁起来，让任意时刻只能有一个线程执行即可。
+    - 基本思想：让程序没有安全问题的环境。怎么实现呢?把多个语句操作共享数据的代码给锁起来，让任意时刻只能有一个线程执行即可。
 - 问题解决方案
     - 因此加入同步锁以避免在该线程没有完成操作之前，被其他线程的调用，从而保证了该变量的唯一性和准确性。
     - 一共有两种锁，来实现线程同步问题，分别是：`synchronized`和`ReentrantLock`。下面我们就带着上述问题，看看这两种锁是如何解决的。
@@ -148,26 +138,24 @@ public class SellTicktes extends Thread {
 
 
 ### 05.synchronized解决同步问题
-- 同步代码块的方式解决线程安全问题
-- **1.5.1 同步代码块的格式**
 - 同步可以解决安全问题的根本原因就在那个对象上。该对象如同锁的功能
-```
-synchronized(对象){
-			需要同步的代码;
-		}
-```
-
-- **1.5.2 同步代码块优势和劣势**
-- 同步的好处:同步的出现解决了多线程的安全问题。
-- 同步的弊端:当线程相当多时，因为每个线程都会去判断同步上的锁，这是很耗费资源的，无形中会降低程序的运行效率。
+    ``` java
+    synchronized(对象){
+        需要同步的代码;
+    }
+    ```
+- 同步代码块优势和劣势
+    - 同步的好处:同步的出现解决了多线程的安全问题。
+    - 同步的弊端:当线程相当多时，因为每个线程都会去判断同步上的锁，这是很耗费资源的，无形中会降低程序的运行效率。
 
 
 
 
 ### 06.ReentrantLock解决同步问题
-- ReentrantLock，一个可重入的互斥锁，它具有与使用synchronized方法和语句所访问的隐式监视器锁相同的一些基本行为和语义，但功能更强大。
+- ReentrantLock，一个可重入的互斥锁
+    - 它具有与使用synchronized方法和语句所访问的隐式监视器锁相同的一些基本行为和语义，但功能更强大。
 - 针对上述方法，具体的解决方式如下：
-    ``` 
+    ``` java
     public class SellTicktes implements Runnable {
         // 当前拥有的票数
         private int num = 100;
@@ -185,11 +173,11 @@ synchronized(对象){
                     System.out.println(Thread.currentThread().getName() + ".....sale...." + num--);
                 }
                 lock.unlock();
-    
             }
         }
     }
     ```
+
 
 
 ### 07.处理多线程并发
