--- a/Read/ReadJavaWiki/11.Java并发/03.锁一些基础概念.md
+++ b/Read/ReadJavaWiki/11.Java并发/03.锁一些基础概念.md
@@ -12,12 +12,6 @@
 
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
-
-
 
 ### 00.锁的分类有哪些
 - 大致的分类有这些
@@ -83,7 +77,8 @@
 
 
 ### 02.乐观锁/悲观锁
-- 乐观锁与悲观锁不是指具体的什么类型的锁，而是指看待并发同步的角度。
+- 乐观锁与悲观锁不是指具体的什么类型的锁
+    - 它们是指看待并发同步的角度。
 - 悲观锁适合写操作非常多的场景，乐观锁适合读操作非常多的场景，不加锁会带来大量的性能提升。
     - 悲观锁在Java中的使用，就是利用各种锁。
     - 乐观锁在Java中的使用，是无锁编程，常常采用的是CAS算法，典型的例子就是原子类，通过CAS自旋实现原子操作的更新。
@@ -91,12 +86,22 @@
 
 #### 2.1 什么是乐观锁
 - 一句话概括
-    - 乐观锁则认为对于同一个数据的并发操作，是不会发生修改的。在更新数据的时候，会采用尝试更新，不断重新的方式更新数据。乐观的认为，不加锁的并发操作是没有事情的。
+    - 乐观锁则认为对于同一个数据的并发操作，是不会发生修改的。在操作共享数据的时候，会采用尝试更新，不断重新的方式更新数据。乐观的认为，不加锁的并发操作是没有事情的。
+    - 实际上，当多个线程同时操作一个共享资源时，只有一个线程会成功，那么失败的线程呢？它们不会像悲观锁一样在操作系统中挂起，而仅仅允许失败的线程重试，也允许自动放弃退出操作。
 
 
 #### 2.2 什么是悲观锁
 - 一句话概括
     - 悲观锁认为对于同一个数据的并发操作，一定是会发生修改的，哪怕没有修改，也会认为修改。因此对于同一个数据的并发操作，悲观锁采取加锁的形式。悲观的认为，不加锁的并发操作一定会出问题。
+
+
+#### 2.3 两者对比
+- 乐观锁相比悲观锁来说
+    - 不会带来死锁、饥饿等活性故障问题，线程间的相互影响也远远比悲观锁要小。更为重要的是，乐观锁没有因竞争造成的系统开销，所以在性能上也是更胜一筹。
+- 悲观锁相比乐观锁来说
+    - 虽然乐观锁在并发性能上要比悲观锁优越，但是在写大于读的操作场景下，CAS 失败的可能性会增大，如果不放弃此次 CAS 操作，就需要循环做 CAS 重试，这无疑会长时间地占用 CPU。
+    - 它只能保证单个变量操作的原子性，当涉及到多个变量时，CAS 就无能为力了，但悲观锁可以通过对整个代码块加锁来做到这点。
+
 
 
 ### 03.可重入锁
@@ -140,6 +145,7 @@
 ### 05.互斥锁/读写锁
 - 上面讲的独享锁/共享锁就是一种广义的说法，互斥锁/读写锁就是具体的实现。
 
+
 #### 5.1 什么是互斥锁
 
 
@@ -162,7 +168,8 @@
     - 我们以ConcurrentHashMap来说一下分段锁的含义以及设计思想，ConcurrentHashMap中的分段锁称为Segment，它即类似于HashMap（JDK7与JDK8中HashMap的实现）的结构，即内部拥有一个Entry数组，数组中的每个元素又是一个链表；同时又是一个ReentrantLock（Segment继承了ReentrantLock)。
     - 当需要put元素的时候，并不是对整个hashmap进行加锁，而是先通过hashcode来知道他要放在那一个分段中，然后对这个分段进行加锁，所以当多线程put的时候，只要不是放在一个分段中，就实现了真正的并行的插入。
     - 但是，在统计size的时候，可就是获取hashmap全局信息的时候，就需要获取所有的分段锁才能统计。
-分段锁的设计目的是细化锁的粒度，当操作不需要更新整个数组的时候，就仅仅针对数组中的一项进行加锁操作。
+- 分段锁的设计目的
+    - 主要是细化锁的粒度，当操作不需要更新整个数组的时候，就仅仅针对数组中的一项进行加锁操作。
 
 
 
