--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -170,14 +170,18 @@
 电信 面试时间晚上6点-7点，二面过，等消息
 
 3月11日
-极客邦 面试时间下午3点半-4点半
+极客邦        下午3点半-4点半
 
-3月14日
-作业帮 下午3点-4点
-最右 下午6点-7点
+3月14日周一
+作业帮        下午3点-4点
+最右          下午6点-7点
 
-3月15日
-小米 下午3点半-4点半
+3月15日周二
+VipKid       上午11点-12点
+小米          下午3点半-4点半
+
+3月16日周三
+APUS         上午10点-11点
 
 
 
