--- a/Read/ReadJavaWiki/11.Java并发/15.Atomic原子操作类.md
+++ b/Read/ReadJavaWiki/11.Java并发/15.Atomic原子操作类.md
@@ -1,6 +1,16 @@
 #### 目录介绍
-- 01.原子操作类介绍
-- 02.预备知识--CAS操作
+- 01.整体的概述
+    - 1.1 说一个并发案例
+    - 1.2 乐观锁与悲观锁
+    - 1.3 高效atomic类
+- 02.CAS简单介绍
+    - 2.1 什么是CAS
+    - 2.2 CAS的操作过程
+    - 2.3 Synchronized VS CAS
+    - 2.4 CAS的问题分析
+    - 2.5 CAS应用场景
+    - 2.6 优化CAS过程
+    - 2.7 CAS局限性
 - 03.原子更新基本类型
 - 04.原子更新数组类型
 - 05.原子更新引用类型
@@ -9,28 +19,116 @@
 
 
 
+### 01.整体的概述
+#### 1.1 说一个并发案例
+- 在并发编程中很容易出现并发安全的问题
+    - 有一个很简单的例子就是多线程更新变量i=1，比如多个线程执行i++操作，就有可能获取不到正确的值，而这个问题，最常用的方法是通过Synchronized进行控制来达到线程安全的目的。
+    - 但是由于synchronized是采用的是悲观锁策略，并不是特别高效的一种解决方案。
 
 
+#### 1.2 乐观锁与悲观锁
+- cpu的基础概念
+    - cpu是时分复用的，也就是把cpu的时间片，分配给不同的thread/process轮流执行，时间片与时间片之间，需要进行cpu切换，也就是会发生进程的切换。切换涉及到清空寄存器，缓存数据。然后重新加载新的thread所需数据。当一个线程被挂起时，加入到阻塞队列，在一定的时间或条件下，在通过notify()，notifyAll()唤醒回来。
+- 什么是阻塞状态
+    - 在某个资源不可用的时候，就将cpu让出，把当前等待线程切换为阻塞状态。等到资源(比如一个共享数据）可用了，那么就将线程唤醒，让他进入runnable状态等待cpu调度。
+- 悲观锁的实现
+    - synchronized就是一种悲观锁，它假设最坏的情况，认为一个线程修改共享数据的时候其他线程也会修改该数据，因此只在确保其它线程不会造成干扰的情况下执行，会导致其它所有需要锁的线程挂起，等待持有锁的线程释放锁。
+- 悲观锁的问题分析
+    - **但是，由于在进程挂起和恢复执行过程中存在着很大的开销**。当一个线程正在等待锁时，它不能做任何事，所以悲观锁有很大的缺点。
+    - 举个例子，如果一个线程需要某个资源，但是这个资源的占用时间很短，当线程第一次抢占这个资源时，可能这个资源被占用，如果此时挂起这个线程，可能立刻就发现资源可用，然后又需要花费很长的时间重新抢占锁，时间代价就会非常的高。
+- 乐观锁的概念
+    - 核心思路就是，**每次不加锁而是假设修改数据之前其他线程一定不会修改，如果因为修改过产生冲突就失败就重试，直到成功为止。** 在上面的例子中，某个线程可以不让出cpu，而是一直while循环，如果失败就重试，直到成功为止。所以，当数据争用不严重时，乐观锁效果更好。比如CAS就是一种乐观锁思想的应用。
 
 
-### 01.原子操作类介绍
-- 在并发编程中很容易出现并发安全的问题，有一个很简单的例子就是多线程更新变量i=1,比如多个线程执行i++操作，就有可能获取不到正确的值，而这个问题，最常用的方法是通过Synchronized进行控制来达到线程安全的目的。但是由于synchronized是采用的是悲观锁策略，并不是特别高效的一种解决方案。实际上，在J.U.C下的atomic包提供了一系列的操作简单，性能高效，并能保证线程安全的类去更新基本类型变量，数组元素，引用类型以及更新对象中的字段类型。atomic包下的这些类都是采用的是乐观锁策略去原子更新数据，在java中则是使用CAS操作具体实现。
+#### 1.3 高效atomic类
+- 那么是否有高效的并发解决办法呢
+    - 实际上，在J.U.C下的atomic包提供了一系列的操作简单，性能高效，并能保证线程安全的类去更新基本类型变量，数组元素，引用类型以及更新对象中的字段类型。
+    - atomic包下的这些类都是采用的是乐观锁策略去原子更新数据，在java中则是使用CAS操作具体实现。
 
 
 ### 02.预备知识--CAS操作
+#### 2.1 什么是CAS
 - 能够弄懂atomic包下这些原子操作类的实现原理，就要先明白什么是CAS操作。
 - 什么是CAS?
-    - 使用锁时，线程获取锁是一种悲观锁策略，即假设每一次执行临界区代码都会产生冲突，所以当前线程获取到锁的时候同时也会阻塞其他线程获取该锁。而CAS操作（又称为无锁操作）是一种乐观锁策略，它假设所有线程访问共享资源的时候不会出现冲突，既然不会出现冲突自然而然就不会阻塞其他线程的操作。因此，线程就不会出现阻塞停顿的状态。那么，如果出现冲突了怎么办？无锁操作是使用CAS(compare and swap)又叫做比较交换来鉴别线程是否出现冲突，出现冲突就重试当前操作直到没有冲突为止。
+    - 使用锁时，线程获取锁是一种悲观锁策略，即假设每一次执行临界区代码都会产生冲突，所以当前线程获取到锁的时候同时也会阻塞其他线程获取该锁。
+    - 而CAS操作（又称为无锁操作）是一种乐观锁策略，它假设所有线程访问共享资源的时候不会出现冲突，既然不会出现冲突自然而然就不会阻塞其他线程的操作。因此，线程就不会出现阻塞停顿的状态。
+- 那么，如果出现冲突了怎么办？
+    - 无锁操作是使用CAS(compare and swap)又叫做比较交换来鉴别线程是否出现冲突，出现冲突就重试当前操作直到没有冲突为止。
+
+
+
+#### 2.2 CAS的操作过程
+- 核心原理说明
+    - CAS比较交换的过程可以通俗的理解为CAS(V,O,N)，包含三个值分别为：V 内存地址存放的实际值；O 预期的值（旧值）；N 更新的新值。
 - CAS的操作过程
-    - CAS比较交换的过程可以通俗的理解为CAS(V,O,N)，包含三个值分别为：V 内存地址存放的实际值；O 预期的值（旧值）；N 更新的新值。当V和O相同时，也就是说旧值和内存中实际的值相同表明该值没有被其他线程更改过，即该旧值O就是目前来说最新的值了，自然而然可以将新值N赋值给V。反之，V和O不相同，表明该值已经被其他线程改过了则该旧值O不是最新版本的值了，所以不能将新值N赋给V，返回V即可。当多个线程使用CAS操作一个变量是，只有一个线程会成功，并成功更新，其余会失败。失败的线程会重新尝试，当然也可以选择挂起线程
-    - CAS的实现需要硬件指令集的支撑，在JDK1.5后虚拟机才可以使用处理器提供的CMPXCHG指令实现。
-- **Synchronized VS CAS**
-    - 元老级的Synchronized(未优化前)最主要的问题是：在存在线程竞争的情况下会出现线程阻塞和唤醒锁带来的性能问题，因为这是一种互斥同步（阻塞同步）。而CAS并不是武断的间线程挂起，当CAS操作失败后会进行一定的尝试，而非进行耗时的挂起唤醒的操作，因此也叫做非阻塞同步。这是两者主要的区别。
-- CAS的问题
-    - 1.ABA问题
-        - 因为CAS会检查旧值有没有变化，这里存在这样一个有意思的问题。比如一个旧值A变为了成B，然后再变成A，刚好在做CAS时检查发现旧值并没有变化依然为A，但是实际上的确发生了变化。解决方案可以沿袭数据库中常用的乐观锁方式，添加一个版本号可以解决。原来的变化路径A->B->A就变成了1A->2B->3C。
-    - 2.自旋时间过长
-        - 使用CAS时非阻塞同步，也就是说不会将线程挂起，会自旋（无非就是一个死循环）进行下一次尝试，如果这里自旋时间过长对性能是很大的消耗。如果JVM能支持处理器提供的pause指令，那么在效率上会有一定的提升。
+    - 当V和O相同时，也就是说旧值和内存中实际的值相同表明该值没有被其他线程更改过，即该旧值O就是目前来说最新的值了，自然而然可以将新值N赋值给V。
+    - 反之，V和O不相同，表明该值已经被其他线程改过了则该旧值O不是最新版本的值了，所以不能将新值N赋给V，返回V即可。
+    - 当多个线程使用CAS操作一个变量是，只有一个线程会成功，并成功更新，其余会失败。失败的线程会重新尝试，当然也可以选择挂起线程
+- CAS的实现需要硬件指令集的支撑
+    - 在JDK1.5后虚拟机才可以使用处理器提供的CMPXCHG指令实现。
+
+
+#### 2.3 Synchronized VS CAS
+- 两者对比分析
+    - 元老级的Synchronized(未优化前)最主要的问题是：在存在线程竞争的情况下会出现线程阻塞和唤醒锁带来的性能问题，因为这是一种互斥同步（阻塞同步）。
+    - 而CAS并不是武断的间线程挂起，当CAS操作失败后会进行一定的尝试，而非进行耗时的挂起唤醒的操作，因此也叫做非阻塞同步。这是两者主要的区别。
+
+
+#### 2.4 CAS的问题分析
+- 1.ABA问题
+    - 因为CAS会检查旧值有没有变化，这里存在这样一个有意思的问题。比如一个旧值A变为了成B，然后再变成A，刚好在做CAS时检查发现旧值并没有变化依然为A，但是实际上的确发生了变化。
+    - 解决方案可以沿袭数据库中常用的乐观锁方式，添加一个版本号可以解决。原来的变化路径A->B->A就变成了1A->2B->3A。
+    - 从Java1.5开始JDK的atomic包里提供了一个类AtomicStampedReference来解决ABA问题。这个类的compareAndSet方法作用是首先检查当前引用是否等于预期引用，并且当前标志是否等于预期标志，如果全部相等，则以原子方式将该引用和该标志的值设置为给定的更新值。
+- 2.自旋时间过长
+    - 使用CAS时非阻塞同步，也就是说不会将线程挂起，会自旋（无非就是一个死循环）进行下一次尝试，如果这里自旋时间过长对性能是很大的消耗。如果JVM能支持处理器提供的pause指令，那么在效率上会有一定的提升。
+- 3.只能保证一个共享变量的原子操作
+    - 当对一个共享变量执行操作时，我们可以使用循环CAS的方式来保证原子操作，但是对多个共享变量操作时，循环CAS就无法保证操作的原子性，这个时候就可以用锁，或者有一个取巧的办法，就是把多个共享变量合并成一个共享变量来操作。
+    - 比如有两个共享变量i＝2,j=a，合并一下ij=2a，然后用CAS来操作ij。从Java1.5开始JDK提供了AtomicReference类来保证引用对象之间的原子性，你可以把多个变量放在一个对象里来进行CAS操作。
+
+
+
+
+
+
+#### 2.5 CAS应用场景
+- 在java中可以通过锁和循环CAS的方式来实现原子操作。
+    - Java中`java.util.concurrent.atomic`包相关类就是 CAS的实现
+- atomic包里包括以下类：
+    | 类名                                   | 说明                                       |
+    | ------------------------------------ | ---------------------------------------- |
+    | **AtomicBoolean**                    | 可以用原子方式更新的 `boolean` 值。                  |
+    | **AtomicInteger**                    | 可以用原子方式更新的 `int` 值。                      |
+    | **AtomicIntegerArray**               | 可以用原子方式更新其元素的 `int` 数组。                  |
+    | **AtomicIntegerFieldUpdater<T\>**     | 基于反射的实用工具，可以对指定类的指定 `volatile int` 字段进行原子更新。 |
+    | **AtomicLong**                       | 可以用原子方式更新的 `long` 值。                     |
+    | **AtomicLongArray**                  | 可以用原子方式更新其元素的 `long` 数组。                 |
+    | **AtomicLongFieldUpdater<T\>**        | 基于反射的实用工具，可以对指定类的指定 `volatile long` 字段进行原子更新。 |
+    | **AtomicMarkableReference<V\>**       | `AtomicMarkableReference` 维护带有标记位的对象引用，可以原子方式对其进行更新。 |
+    | **AtomicReference<V\>**               | 可以用原子方式更新的对象引用。                          |
+    | **AtomicReferenceArray<E\>**          | 可以用原子方式更新其元素的对象引用数组。                     |
+    | **AtomicReferenceFieldUpdater<T，V\>** | 基于反射的实用工具，可以对指定类的指定 `volatile` 字段进行原子更新。 |
+    | **AtomicStampedReference<V\>**        | `AtomicStampedReference` 维护带有整数“标志”的对象引用，可以用原子方式对其进行更新。 |
+
+
+
+#### 2.6 优化CAS过程
+- 在 Java7 演变到 Java8
+    - 通过以下代码我们可以看到：AtomicInteger 的 getAndSet 方法中使用了 for 循环不断重试 CAS 操作，如果长时间不成功，就会给 CPU 带来非常大的执行开销。
+    - 到了 Java8，for 循环虽然被去掉了，但我们反编译 Unsafe 类时就可以发现该循环其实是被封装在了 Unsafe 类中，CPU 的执行开销依然存在。
+- LongAdder 更加高效
+    - 在 JDK1.8 中，Java 提供了一个新的原子类 LongAdder。LongAdder 在高并发场景下会比 AtomicInteger 和 AtomicLong 的性能更好，代价就是会消耗更多的内存空间。
+    - LongAdder 的原理就是降低操作共享变量的并发数，也就是将对单一共享变量的操作压力分散到多个变量值上，将竞争的每个写线程的 value 值分散到一个数组中，不同线程会命中到数组的不同槽中，各个线程只对自己槽中的 value 值进行 CAS 操作，最后在读取值的时候会将原子操作的共享变量与各个分散在数组的 value 值相加，返回一个近似准确的数值。
+    - 可以发现，LongAdder 在操作后的返回值只是一个近似准确的数值，但是 LongAdder 最终返回的是一个准确的数值， 所以在一些对实时性要求比较高的场景下，LongAdder 并不能取代 AtomicInteger 或 AtomicLong。
+
+
+
+#### 2.7 CAS局限性
+- CAS 乐观锁在平常使用时比较受限
+    - 它只能保证单个变量操作的原子性，当涉及到多个变量时，CAS 就无能为力了，但悲观锁可以通过对整个代码块加锁来做到这点。
+- 高并发写大于读的场景
+    - CAS 乐观锁在高并发写大于读的场景下，大部分线程的原子操作会失败，失败后的线程将会不断重试 CAS 原子操作，这样就会导致大量线程长时间地占用 CPU 资源，给系统带来很大的性能开销。在 JDK1.8 中，Java 新增了一个原子类 LongAdder，它使用了空间换时间的方法，解决了上述问题。
+
+
 
 
 ### 03.原子更新基本类型
@@ -44,17 +142,17 @@
     - 3.getAndSet(int newValue)：将实例中的值更新为新值，并返回旧值；
     - 4.getAndIncrement()：以原子的方式将实例中的原值加1，返回的是自增前的旧值；
 - 还有一些方法，可以查看API，不再赘述。为了能够弄懂AtomicInteger的实现原理，以getAndIncrement方法为例，来看下源码：
-    ```java
+    ``` java
     public final int getAndIncrement() {
         return unsafe.getAndAddInt(this, valueOffset, 1);
     }
     ```
 - 可以看出，该方法实际上是调用了unsafe实例的getAndAddInt方法，unsafe实例的获取时通过UnSafe类的静态方法getUnsafe获取：
-    ```
+    ```  java
     private static final Unsafe unsafe = Unsafe.getUnsafe();
     ```
 - Unsafe类在sun.misc包下，Unsafer类提供了一些底层操作，atomic包下的原子操作类的也主要是通过Unsafe类提供的compareAndSwapInt，compareAndSwapLong等一系列提供CAS操作的方法来进行实现。下面用一个简单的例子来说明AtomicInteger的用法：
-    ```
+    ``` java
     public class AtomicDemo {
         private static AtomicInteger atomicInteger = new AtomicInteger(1);
     
@@ -69,7 +167,7 @@
     ```
 - 例子很简单，就是新建了一个atomicInteger对象，而atomicInteger的构造方法也就是传入一个基本类型数据即可，对其进行了封装。对基本变量的操作比如自增，自减，相加，更新等操作，atomicInteger也提供了相应的方法进行这些操作。但是，因为atomicInteger借助了UnSafe提供的CAS操作能够保证数据更新的时候是线程安全的，并且由于CAS是采用乐观锁策略，因此，这种数据更新的方法也具有高效性。
 - AtomicLong的实现原理和AtomicInteger一致，只不过一个针对的是long变量，一个针对的是int变量。而boolean变量的更新类AtomicBoolean类是怎样实现更新的呢?核心方法是`compareAndSet`t方法，其源码如下：
-    ```java
+    ``` java
     public final boolean compareAndSet(boolean expect, boolean update) {
         int e = expect ? 1 : 0;
         int u = update ? 1 : 0;
@@ -90,7 +188,7 @@
     - 2.getAndIncrement(int i)：以原子更新的方式将数组中索引为i的元素自增加1；
     - 3.compareAndSet(int i, int expect, int update)：将数组中索引为i的位置的元素进行更新
 - 可以看出，AtomicIntegerArray与AtomicInteger的方法基本一致，只不过在AtomicIntegerArray的方法中会多一个指定数组索引位i。下面举一个简单的例子：
-    ```
+    ``` java
     public class AtomicDemo {
         //    private static AtomicInteger atomicInteger = new AtomicInteger(1);
         private static int[] value = new int[]{1, 2, 3};
@@ -210,16 +308,16 @@
 
 
 #### 7.2 典型回答
-- AtomicIntger 是对 int 类型的一个封装，提供原子性的访问和更新操作，其原子性操作的实现是基于 CAS（compare-and-swap）技术。
+- AtomicInteger 是对 int 类型的一个封装，提供原子性的访问和更新操作，其原子性操作的实现是基于 CAS（compare-and-swap）技术。
 - 所谓 CAS，表征的是一些列操作的集合，获取当前数值，进行一些运算，利用 CAS 指令试图进行更新。如果当前数值未变，代表没有其他线程进行并发修改，则成功更新。否则，可能出现不同的选择，要么进行重试，要么就返回一个成功或者失败的结果。
 - 从 AtomicInteger 的内部属性可以看出，它依赖于 Unsafe 提供的一些底层能力，进行底层操作；以 volatile 的 value 字段，记录数值，以保证可见性。
-    ```java
+    ``` java
     private static final jdk.internal.misc.Unsafe U = jdk.internal.misc.Unsafe.getUnsafe();
     private static final long VALUE = U.objectFieldOffset(AtomicInteger.class, "value");
     private volatile int value;
     ```
 - 具体的原子操作细节，可以参考任意一个原子更新方法，比如下面的 getAndIncrement。Unsafe 会利用 value 字段的内存地址偏移，直接完成操作。
-    ```java
+    ``` java
     public final int getAndIncrement() {
         return U.getAndAddInt(this, VALUE, 1);
     }
@@ -263,7 +361,7 @@
     }
     ```
 - 那么在 Java 代码中，我们怎么实现锁操作呢？Unsafe 似乎不是个好的选择，例如，我就注意到类似 Cassandra 等产品，因为 Java 9 中移除了 Unsafe.moniterEnter()/moniterExit()，导致无法平滑升级到新的 JDK 版本。目前 Java 提供了两种公共 API，可以实现这种 CAS 操作，比如使用 java.util.concurrent.atomic.AtomicLongFieldUpdater，它是基于反射机制创建，我们需要保证类型和字段名称正确。
-    ```java
+    ``` java
     private static final AtomicLongFieldUpdater<AtomicBTreePartition> lockFieldUpdater =
             AtomicLongFieldUpdater.newUpdater(AtomicBTreePartition.class, "lock");
     
