完善线程库中threadId的记录

--- a/Read/ReadAndroidWiki/06.消息机制/01.Handler基础的使用.md
+++ b/Read/ReadAndroidWiki/06.消息机制/01.Handler基础的使用.md
@@ -14,7 +14,7 @@
 - 作用：
     - 跨线程通信。当子线程中进行耗时操作后需要更新UI时，通过Handler将有关UI的操作切换到主线程中执行。
 - 四要素：
-    - Message（消息）：需要被传递的消息，其中包含了消息ID，消息处理对象以及处理的数据等，由MessageQueue统一列队，最终由Handler处理。[技术博客大总结](https://github.com/yangchong211/YCBlogs)
+    - Message（消息）：需要被传递的消息，其中包含了消息ID，消息处理对象以及处理的数据等，由MessageQueue统一列队，最终由Handler处理。
     - MessageQueue（消息队列）：用来存放Handler发送过来的消息，通过 Handler 发送的消息并非是立即执行的，需要存入一个消息队列中来依次执行，内部通过单链表的数据结构来维护消息列表，等待Looper的抽取。
     - Handler（处理者）：负责Message的发送及处理。通过 Handler.sendMessage() 向消息池发送各种消息事件；通过 Handler.handleMessage() 处理相应的消息事件。
     - Looper（消息泵）：通过Looper.loop()不断地从MessageQueue中抽取Message，按分发机制将消息分发给目标处理者。Looper 不断从 MessageQueue 中获取消息并将之传递给消息处理者（即是消息发送者 Handler 本身）进行处理。
