完善handler同步屏障笔记

--- a/Read/ReadAndroidWiki/06.消息机制/01.Handler基础的使用.md
+++ b/Read/ReadAndroidWiki/06.消息机制/01.Handler基础的使用.md
@@ -6,6 +6,11 @@
 - 04.避免子线程手动创建looper
 - 05.Handler建议指定线程
 - 06.不建议在子线程访问UI
+- 07.子线程更新UI方式
+    - 7.1 子线程更新UI有哪些方式
+    - 7.2 runOnUiThread更新UI
+    - 7.3 handler.post更新UI
+    - 7.4 View.post()更新UI
 - 08.解决Handler内存泄漏
 
 
@@ -209,6 +214,106 @@
     - 前者在UI线程中使用，后者在非UI线程即子线程中使用。换句话说，在子线程调用 invalidate 方法会导致线程不安全。
     - 熟悉View工作原理的人都知道，invalidate 方法会通知 view 立即重绘，刷新界面。
     - 作一个假设，现在用 invalidate 在子线程中刷新界面，同时UI线程也在用 invalidate 刷新界面，这样会不会导致界面的刷新不能同步？这就是invalidate不能在子线程中使用的原因。[博客](https://github.com/yangchong211/YCBlogs)
+
+
+
+### 07.子线程更新UI方式
+#### 7.1 子线程更新UI有哪些方式
+- 主要有这些方法
+    - 主线程中定义Handler，子线程通过mHandler发送消息，主线程Handler的handleMessage更新UI
+    - 用Activity对象的runOnUiThread方法
+    - 创建Handler，传入getMainLooper，使用handler.post更新UI
+    - View.post(Runnable r) 
+- 相似处
+    - 跟进去看源码，发现其实它们的实现原理都还是一样，最终都是通过Handler发送消息来实现的。
+
+
+
+#### 7.2 runOnUiThread更新UI
+- 如何使用代码如下所示
+    ```
+    new Thread(new Runnable() {
+        @Override
+        public void run() {
+            runOnUiThread(new Runnable() {
+                @Override
+                public void run() {
+                    tv_0.setText("滚犊子++++");
+                }
+            });
+        }
+    }).start();
+    ```
+- 看看源码，如下所示
+    - 在runOnUiThread程序首先会判断当前线程是否是UI线程，如果是就直接运行，如果不是则post，这时其实质还是使用的Handler机制来处理线程与UI通讯。[博客](https://github.com/yangchong211/YCBlogs)
+    ```
+    @Override
+    public final void runOnUiThread(Runnable action) {
+        if (Thread.currentThread() != mUiThread) {
+            mHandler.post(action);
+        } else {
+            action.run();
+        }
+    }
+    ```
+
+
+#### 7.3 handler.post更新UI
+- Looper在哪个线程创建，就跟哪个线程绑定，并且Handler是在他关联的Looper对应的线程中处理消息的。
+    - 在子线程中，是否也可以创建一个Handler，并获取MainLooper，从而在子线程中更新UI呢？首先我们看到，在Looper类中有静态对象sMainLooper，并且这个sMainLooper就是在ActivityThread中创建的MainLooper。
+    ```
+    //在子线程中通过这个sMainLooper来进行更新UI操作
+    new Thread(new Runnable() {
+        @Override
+        public void run() {
+            Log.e("yc", "yc 4"+Thread.currentThread().getName());
+            //注意这里创建handler时，需要传入looper
+            Handler handler = new Handler(getMainLooper());
+            handler.post(new Runnable() {
+                @Override
+                public void run() {
+                    //Do Ui method
+                    tv_0.setText("滚犊子————————————---");
+                    Log.e("yc", "yc 5"+Thread.currentThread().getName());
+                }
+            });
+        }
+    }).start();
+    ```
+
+
+#### 7.4 View.post()更新UI
+- 代码如下所示
+    ```
+    tv_0.post(new Runnable() {
+        @Override
+        public void run() {
+            tv_0.setText("滚犊子");
+        }
+    });
+    ```
+- 源码原理如下所示
+    ```
+    public boolean post(Runnable action) {
+        final AttachInfo attachInfo = mAttachInfo;
+        if (attachInfo != null) {
+            return attachInfo.mHandler.post(action);
+        }
+        getRunQueue().post(action);
+        return true;
+    }
+    
+    private HandlerActionQueue getRunQueue() {
+        if (mRunQueue == null) {
+            mRunQueue = new HandlerActionQueue();
+        }
+        return mRunQueue;
+    }
+    ```
+- View.post(Runnable r)使用注意事项
+    - 看源码的注释可知：如果view已经attached，则调用ViewRootImpl中的ViewRootHandler，放入主线程Lopper等待执行。如果detach，则将其暂存在RunQueue当中，等待其它线程取出执行。
+    - View.post(Runnable r)很多时候在子线程调用，用于进行子线程无法完成的操作，或者在该方法中通过getMeasuredWidth()获取view的宽高。需要注意的是，在子线程调用该函数，可能不会被执行，原因是该view不是attached状态。[博客](https://github.com/yangchong211/YCBlogs)
+
 
 
 
