--- a/Read/ReadAndroidWiki/06.消息机制/05.MessageQueue解析.md
+++ b/Read/ReadAndroidWiki/06.消息机制/05.MessageQueue解析.md
@@ -1,24 +1,38 @@
 #### 目录介绍
 - 01.MessageQueue作用介绍
+    - 1.1 主要是做什么
+    - 1.2 数据结构是什么
 - 02.MessageQueue的定义
+    - 2.1 定义是什么
+    - 2.2 从哪里创建的
 - 03.enqueueMessage()源码
+    - 3.1 解读源码流程
+    - 3.2 如何处理消息延时
 - 04.next()方法源码分析
+    - 4.1 源码流程分析
+    - 4.2 处理延迟消息逻辑
 - 05.延迟发送消息队列分析
 
 
 
 
 ### 01.MessageQueue作用介绍
+#### 1.1 主要是做什么
 - MessageQueue，主要包含2个操作：插入和读取。
     - 读取操作会伴随着删除操作，插入和读取对应的方法分别为enqueueMessage和next，其中enqueueMessage的作用是往消息队列中插入一条消息，而next的作用是从消息队列中取出一条消息并将其从消息队列中移除。
+
+
+#### 1.2 数据结构是什么
 - 虽然MessageQueue叫消息队列，但是它的内部实现并不是用的队列。
     - 实际上它是通过一个单链表的数据结构来维护消息列表，单链表在插入和删除上比较有优势。
 
 
 
-
 ### 02.MessageQueue的定义
-- 通过源码我们可以知道，MessageQueue维护了一个消息列表。Messgae并不是直接添加到MessageQueue中，而是通过和Looper相关联的Handler来添加的。在当前线程中可以通过调用Looper.myQueue()方法来获取当前线程的MessageQueue。[博客](https://github.com/yangchong211/YCBlogs)
+#### 2.1 定义是什么
+- 通过源码我们可以知道，MessageQueue维护了一个消息列表。
+    - Message并不是直接添加到MessageQueue中，而是通过和Looper相关联的Handler来添加的。
+    - 在当前线程中可以通过调用Looper.myQueue()方法来获取当前线程的MessageQueue。[博客](https://github.com/yangchong211/YCBlogs)
     ```
     /**
      * Low-level class holding the list of messages to be dispatched by a
@@ -32,12 +46,29 @@
     ```
 
 
+#### 2.2 从哪里创建的
+- 既然 `Looper` 对象已经由系统来为我们初始化好了，那我们就可以从中得到 `mQueue`对象。
+    ```
+    public Handler(Callback callback, boolean async) {
+        //获取 MessageQueue 对象
+        mQueue = mLooper.mQueue;
+    }
+    ```
+- `mQueue` 又是在 `Looper` 类的构造函数中初始化的，且 `mQueue` 是 `Looper` 类的成员常量，这说明 Looper 与 MessageQueue 是一一对应的关系
+    ```
+    private Looper(boolean quitAllowed) {
+        mQueue = new MessageQueue(quitAllowed);
+        mThread = Thread.currentThread();
+    }
+    ```
 
 
 ### 03.enqueueMessage()源码
+#### 3.1 解读源码流程
 - 源码如下所示
-    - 在Message的源码中定义了一个成员属性target，其类型为Handler。由上面enqueuMessage的源码，我们可以看到，当Message没有处理其的Handler或该Message正在被处理的时候，都不能正常进入MessageQueue，这一点也是很容易理解的。当线程处于死亡状态的时候，Message会被回收掉，而不再进入该线程对应的MessageQueue中。否则，一切正常，enqueMessage就执行单链表的插入操作，将Message插入到MessageQueue中。
-    ```
+    - 在Message的源码中定义了一个成员属性target，其类型为Handler。由上面enqueuMessage的源码，我们可以看到，当Message没有处理其的Handler或该Message正在被处理的时候，都不能正常进入MessageQueue，这一点也是很容易理解的。
+    - 当线程处于死亡状态的时候，Message会被回收掉，而不再进入该线程对应的MessageQueue中。否则，一切正常，enqueMessage就执行单链表的插入操作，将Message插入到MessageQueue中。
+    ``` java
     boolean enqueueMessage(Message msg, long when) {
         if (msg.target == null) {
             throw new IllegalArgumentException("Message must have a target.");
@@ -97,8 +128,14 @@
         return true;
     }
     ```
+
+
+
+
+#### 3.2 如何处理消息延时
 - 思考如何处理消息延时
-    - MessageQueue是按照Message触发时间的先后顺序排列的【也就是说会改变链表的顺序】，队头的消息是将要最早触发的消息。排在越前面的越早触发，那我们现在应该了解到了，这个所谓的延时呢，不是延时发送消息，而是延时去处理消息，我们在发消息都是马上插入到消息队列当中。
+    - MessageQueue是按照Message触发时间的先后顺序排列的【也就是说会改变链表的顺序】，队头的消息是将要最早触发的消息。
+    - 排在越前面的越早触发，那我们现在应该了解到了，这个所谓的延时呢，不是延时发送消息，而是延时去处理消息，我们在发消息都是马上插入到消息队列当中。
 - 插入完消息之后，怎么又保证在我们预期的时间里处理消息呢？
     - 需要看一下next()方法。
 
@@ -106,6 +143,7 @@
 
 
 ### 04.next()方法源码分析
+#### 4.1 源码流程分析
 - next方法源码如下所示
     - 在 MessageQueue 中消息的读取其实是通过内部的 `next()` 方法进行的，`next()` 方法是一个无限循环的方法。[博客](https://github.com/yangchong211/YCBlogs)
     - 如果消息队列中没有消息，则该方法会一直阻塞，
@@ -217,8 +255,11 @@
         }
     }
     ```
+
+#### 4.2 处理延迟消息逻辑
 - 如何处理延迟消息的获取
-    - msg != null 我们看下这部分，如果当前时间小于头部时间（消息队列是按时间顺序排列的），那就更新等待时间nextPollTimeoutMillis,等下次再做比较。如果时间到了，就取这个消息并返回。如果没有消息，nextPollTimeoutMillis被赋为-1，这个循环又执行到nativePollOnce继续阻塞。
+    - msg != null 我们看下这部分，如果当前时间小于头部时间（消息队列是按时间顺序排列的），那就更新等待时间nextPollTimeoutMillis，等下次再做比较。
+    - 如果时间到了，就取这个消息并返回。如果没有消息，nextPollTimeoutMillis被赋为-1，这个循环又执行到nativePollOnce继续阻塞。
 - nativePollOnce最终执行到的函数
     - Looper.cpp:: pollInner。可以看到是由 epoll_wait来阻塞的。
     ```
