--- a/Read/ReadMeWiki/00.方案实践/13.线程优化实践操作.md
+++ b/Read/ReadMeWiki/00.方案实践/13.线程优化实践操作.md
@@ -8,6 +8,7 @@
     - 2.1 线程使用问题
     - 2.2 线程问题有哪些
     - 2.3 使用线程池管理线程
+    - 2.4 线程问题排查难
 - 03.线程的一些基础
     - 3.1 主线程与子线程
     - 3.2 UI线程的特点
@@ -22,7 +23,7 @@
     - 4.6 线程池Executors
 - 05.高效的使用线程
     - 5.1 多线程安全问题
-    - 5.2 
+    - 5.2 频繁发送消息问题
 - 06.合理设置线程优先级
     - 6.1 设置线程优先级方式
 - 07.线程卡顿是怎么回事
@@ -51,7 +52,11 @@
 
 
 #### 2.3 使用线程池管理线程
-- 因为在系统中创建线程是一个比较耗费资源的事, 所以不能频繁创建和释放线程, 因此在效率上考虑通常会使用线程池, 同时也便于线程的管理。 Android中的AsyncTask就使用了线程池。
+- 因为在系统中创建线程是一个比较耗费资源的事, 所以不能频繁创建和释放线程, 因此在效率上考虑通常会使用线程池, 同时也便于线程的管理。
+    - Android中的AsyncTask就使用了线程池。
+
+
+#### 2.4 线程问题排查难
 
 
 ### 03.线程的一些基础
@@ -187,6 +192,36 @@
     - 使用多线程时需要注意的是线程安全的问题, 因为同一进程中的线程可以共享内存, 虽然这种方式效率很高, 但是会导致线程干扰和内存一致性的问题。[博客](https://github.com/yangchong211/YCBlogs)
 - 锁机制
     - 解决这些问题的主要方法是使用Synchronized关键字来加锁. 基本原理就是线程要对对象进行操作前需要先获取锁, 如果一个线程正在操作某个对象, 那么它就会持有相应的锁, 后来的线程想要操作这个对象, 只能等待前面的线程释放锁之后才有机会获取锁并进行操作.
+
+
+#### 5.2 频繁发送消息问题
+- 频繁发送消息，处理消息不靠谱的，引起不靠谱的原因有如下
+    - 发送的消息太多，Looper负载越高，任务越容易积压，进而导致卡顿
+    - 消息队列有一些消息处理非常耗时，导致后面的消息延时处理
+    - 大于Handler Looper的周期时基本可靠（例如主线程>50ms）
+    - 对于时间精确度要求较高，不要用handler的delay作为即时的依据
+- 如何优化保证可靠性
+    - 消息精简，从数量上处理
+    - 队列优化，重复消息过滤
+    - 互斥消息取消
+    - 复用消息
+- 消息空闲IdleHandler
+    ``` java
+    MessageQueue.IdleHandler ideHandler =new MessageQueue.IdleHandler() {
+            @Override
+            public boolean queueIdle() {
+                return false;
+            }
+        };
+    Looper.myQueue().addIdleHandler(ideHandler);
+    ```
+- 使用独享的Looper(HandlerThread)
+    ``` java
+    HandlerThread handlerThread = new HandlerThread("A-Thread");
+    handlerThread.start();
+    Handler handler = new Handler(handlerThread.getLooper());
+    ```
+
 
 
 
