--- a/Read/ReadAndroidWiki/06.消息机制/04.Message深度理解.md
+++ b/Read/ReadAndroidWiki/06.消息机制/04.Message深度理解.md
@@ -15,7 +15,8 @@
 - **Android应用是事件驱动的**
     - 也可以说是Message来驱动的。每个进程中都有一个默认的消息队列MessageQueue，其维护了一个待处理的消息列表，Looper不断地从中取出消息、处理消息。
 - **如何处理Message创建和销毁**
-    - 此时我们不禁会抱有一个疑问，在应用运行期间，系统岂不是会不断地创建Message、处理Message、销毁Message？答案当然是否定的，Android作为一个成熟的系统平台，自然不会轻易地采用大量重复构建这种低效耗能的运作方式，本篇文章我们就来了解一下Message。
+    - 此时我们不禁会抱有一个疑问，在应用运行期间，系统岂不是会不断地创建Message、处理Message、销毁Message？
+    - 答案当然是否定的，Android作为一个成熟的系统平台，自然不会轻易地采用大量重复构建这种低效耗能的运作方式，本篇文章我们就来了解一下Message。
 
 
 
@@ -36,9 +37,18 @@
     - Message msg = new Message();
     - Message msg = Message.obtain();
     - Message msg = handler1.obtainMessage();
-- 后两种方法都是从整个Message池中返回一个新的Message实例，能有效避免重复Message创建对象，因此更鼓励这种方式创建Message
-
-
+- 几种方法对比
+    - 后两种方法都是从整个Message池中返回一个新的Message实例，能有效避免重复Message创建对象，因此更鼓励这种方式创建Message
+- Message核心字段含义
+    ```
+    m.what = 定义常量，用来发送消息和匹配消息的数值;
+    m.target = 表示这个消息是从那个handler发出来的
+    m.arg1 = orig.arg1;
+    m.arg2 = orig.arg2;
+    m.obj = 赋值的对象;
+    m.replyTo = orig.replyTo;
+    m.sendingUid = orig.sendingUid;
+    ```
 
 
 ### 03.看一下几个成员字段
