--- a/Read/ReadAndroidWiki/06.消息机制/06.Looper深度解析.md
+++ b/Read/ReadAndroidWiki/06.消息机制/06.Looper深度解析.md
@@ -2,8 +2,7 @@
 - 01.Activity如何自动绑定Looper
 - 02.Looper.prepare()方法源码分析
 - 03.Looper.prepare()能否调用多次
-- 04.Looper中用什么存储消息
-- 05.Looper.loop()方法源码分析
+- 04.Looper.loop()方法源码分析
 - 06.Activity生命周期依赖Looper
 - 07.Looper死循环为何不阻塞应用卡死
 
@@ -17,8 +16,8 @@
 - ActivityThread，并且在main方法中我们会看到主线程也是通过Looper方式来维持一个消息循环。那么这个死循环会不会导致应用卡死，即使不会的话，它会慢慢的消耗越来越多的资源吗？
     - 对于线程即是一段可执行的代码，当可执行代码执行完成后，线程生命周期便该终止了，线程退出。而对于主线程，我们是绝不希望会被运行一段时间，自己就退出，那么如何保证能一直存活呢？简单做法就是可执行代码是能一直执行下去的，死循环便能保证不会被退出。
     - 例如，binder线程也是采用死循环的方法，通过循环方式不同与Binder驱动进行读写操作，当然并非简单地死循环，无消息时会休眠。但这里可能又引发了另一个问题，既然是死循环又如何去处理其他事务呢？通过创建新线程的方式。真正会卡死主线程的操作是在回调方法onCreate/onStart/onResume等操作时间过长，会导致掉帧，甚至发生ANR，looper.loop本身不会导致应用卡死。
-    - 可以看到Looper.prepare()方法在这里调用，所以在主线程中可以直接初始化Handler了。
-    ```
+- 可以看到Looper.prepare()方法在这里调用，所以在主线程中可以直接初始化Handler了。
+    ``` java
     //ActivityThread类中的main方法中重点代码
     //注意：这里省略了许多代码
     public static void main(String[] args) {
@@ -54,7 +53,8 @@
 
 ### 02.Looper.prepare()方法源码分析
 - 源码如下所示
-    - 可以看到Looper中有一个ThreadLocal成员变量，熟悉JDK的同学应该知道，当使用ThreadLocal维护变量时，ThreadLocal为每个使用该变量的线程提供独立的变量副本，所以每一个线程都可以独立地改变自己的副本，而不会影响其它线程所对应的副本。[博客](https://github.com/yangchong211/YCBlogs)
+    - `sThreadLocal` 对象又是通过 `prepare(boolean)` 来进行赋值的，且该方法只允许调用一次，一个线程只能创建一个 Looper 对象，否则将抛出异常。
+    - 熟悉JDK的同学应该知道，当使用ThreadLocal维护变量时，ThreadLocal为每个使用该变量的线程提供独立的变量副本，所以每一个线程都可以独立地改变自己的副本，而不会影响其它线程所对应的副本。[博客](https://github.com/yangchong211/YCBlogs)
     ```
     public static void prepare() {
         prepare(true);
@@ -87,28 +87,9 @@
     };
     Looper.loop();
     ```
+- Looper 类的构造函数也是私有的，且在构造函数中还初始化了一个线程常量 `mThread`，这都说明了 Looper 只能关联到一个线程，且关联之后不能改变。
 
 
-
-
-### 04.Looper中用什么存储消息
-- 先看一下下面得源代码
-    - 看Looper对象的构造方法，可以看到在其构造方法中初始化了一个MessageQueue对象。MessageQueue也称之为消息队列，特点是先进先出，底层实现是单链表数据结构
-    ```
-    private static void prepare(boolean quitAllowed) {
-        if (sThreadLocal.get() != null) {
-            throw new RuntimeException("Only one Looper may be created per thread");
-        }
-        sThreadLocal.set(new Looper(quitAllowed));
-    }
-    
-    private Looper(boolean quitAllowed) {
-        mQueue = new MessageQueue(quitAllowed);
-        mThread = Thread.currentThread();
-    }
-    ```
-- 得出结论
-    - Looper.prepare()方法初始话了一个Looper对象并关联在一个MessageQueue对象，并且一个线程中只有一个Looper对象，只有一个MessageQueue对象。
 
 
 
@@ -181,7 +162,8 @@
     }
     ```
 - 看queue.next()方法源码
-    - 大概的实现逻辑就是Message的出栈操作，里面可能对线程，并发控制做了一些限制等。获取到栈顶的Message对象之后开始执行：msg.target.dispatchMessage(msg)
+    - 大概的实现逻辑就是Message的出栈操作，里面可能对线程，并发控制做了一些限制等。
+    - 获取到栈顶的Message对象之后开始执行：msg.target.dispatchMessage(msg)
     ```
     Message next() {
         // Return here if the message loop has already quit and been disposed.
