leakcanary内存泄漏上报完善

--- a/Read/ReadAndroidWiki/08.事件分发/01.View事件基础介绍.md
+++ b/Read/ReadAndroidWiki/08.事件分发/01.View事件基础介绍.md
@@ -121,7 +121,7 @@
         - 后续事件（Move、Up）会继续分发到该View
     - **返回false**
         - 不消费事件
-        - 事件不会往下传递
+        - 事件往下传递
         - 将事件回传给父控件的onTouchEvent()处理
             - Activity例外：返回false=消费事件
         - 后续事件（Move、Up）会继续分发到该View(与onTouchEvent()区别）
