--- a/Read/ReadAndroidWiki/09.多线程/03.HandlerThread分析.md
+++ b/Read/ReadAndroidWiki/09.多线程/03.HandlerThread分析.md
@@ -21,7 +21,7 @@
 
 ### 01.HandlerThread介绍
 #### 1.1 HandlerThread定义
-- HandlerThread是个什么东西，是一个hanlder还是thread，还是别猜了，直接看一下类的定义吧，英文看不懂，可以找翻译？
+- HandlerThread是个什么东西，是一个handler还是thread，还是别猜了，直接看一下类的定义吧，英文看不懂，可以找翻译？
     - 这个类的作用是创建一个包含looper的线程。
     - 那么在什么时候需要用到它呢?加入在应用程序当中为了实现同时完成多个任务，所以会在应用程序当中创建多个线程。为了让多个线程之间能够方便的通信，会使用Handler实现线程间的通信。这个时候我们手动实现的多线程+Handler的简化版就是我们HandlerThrea所要做的事了。
     ```
@@ -60,8 +60,7 @@
 
 
 #### 1.3 HandlerThread几个特性
-- HandlerThread 继承于 Thread，本身就是一个线程类
-- HandlerThread 在内部维护了自己的 Looper 对象，所以可以进行 looper 循环
+- HandlerThread 继承于 Thread，本身就是一个线程类。在内部维护了自己的 Looper 对象，所以可以进行 looper 循环。
 - 创建 HandlerThread 后需要先调用 `HandlerThread.start()` 方法再向其下发任务，通过 `run()` 方法来创建 Looper 对象
 - 通过传递 HandlerThread 的 Looper 对象给 Handler 对象，从而可以通过 Handler 来向 HandlerThread 下发耗时任务。[博客](https://github.com/yangchong211/YCBlogs)
 
