--- a/Read/ReadMeWiki/00.方案实践/41.LeakCanary内存收集.md
+++ b/Read/ReadMeWiki/00.方案实践/41.LeakCanary内存收集.md
@@ -1,40 +1,60 @@
 #### 目录介绍
-- 01.简单原理概述
-- 02.主要的知识点
-- 04.LeakCanary原理
-- 06.install初始化操作
+- 01.整体概述
+    - 1.1 项目背景
+    - 1.2 遇到问题
+    - 1.3 工作机制
+    - 1.4 设计目标
+    - 1.5 产生收益
+- 02.LeakCanary原理
+    - 2.1 思考一些问题
+    - 2.2 原理流程概括
+    - 2.3 涉及知识点说明
+    - 2.4 install初始化
+    - 2.5 
+    - 2.6 
+- 03.开发实践思路
+    - 3.1 
+- 05.方案基础设计
+    - 5.1 整体架构图
+    - 5.2 UML设计图
+    - 5.3 关键流程图
+    - 5.4 接口设计图
+    - 5.5 模块间依赖关系
+- 06.其他设计说明
+    - 6.1 性能设计
+    - 6.2 稳定性设计
+    - 6.3 灰度设计
+    - 6.4 降级设计
+    - 6.5 异常设计
 
 
 
+#### 1.3 工作机制
+1、RefWatcher.watch() 创建一个 KeyedWeakReference 到要被监控的对象。
+2、然后在后台线程检查引用是否被清除，如果没有，调用GC。
+3、如果引用还是未被清除，把 heap 内存 dump 到 APP 对应的文件系统中的一个 .hprof 文件中。
+4、在另外一个进程中的 HeapAnalyzerService 有一个 HeapAnalyzer 使用HAHA 解析这个文件。
+5、得益于唯一的 reference key, HeapAnalyzer 找到 KeyedWeakReference，定位内存泄露。
+6、HeapAnalyzer 计算 到 GC roots 的最短强引用路径，并确定是否是泄露。如果是的话，建立导致泄露的引用链。
+7、引用链传递到 APP 进程中的 DisplayLeakService， 并以通知的形式展示出来。
 
 
-### 01.简单原理概述
+### 02.LeakCanary原理
+#### 2.1 思考一些问题
 - 首先思考几个问题
     - 在Application中初始化之后，它是如何检测所有的Activity页面的 ？
-    - 内存泄漏的判定条件是什么 ？ 检测内存泄漏的机制原理是什么？
+    - 内存泄漏的判定条件是什么 ？检测内存泄漏的机制原理是什么？
     - 检测出内存泄漏后，它又是如何生成泄漏信息的？ 内存泄漏的输出轨迹是怎么得到的？
 - 原理简单介绍
     - 通过监听Activity的onDestroy，手动调用GC，然后通过ReferenceQueue+WeakReference，来判断Activity对象是否被回收，然后结合dump Heap的hprof文件，通过Haha开源库分析泄露的位置。
 
 
 
-### 02.主要的知识点
-- 注册Activity的生命周期的监听器
-    - 通过Application.registerActivityLifecycleCallbacks()方法注册Activity的生命周期的监听器，每一个Activity的生命周期都会回调到这个ActivityLifecycleCallbacks上，如果一个Activity走到了onDestroy，那么就意味着他就不再存在，然后检测这个Activity是否是真的被销毁
-- 如何检测Fragment的生命周期的呢？
-    - FragmentManager 类提供了 registerFragmentLifecycleCallbacks 和 unregisterFragmentLifecycleCallbacks 方法用户注册和反注册 Fragment 的生命周期监听类，这样我们对每一个 Activity 进行注册，就能获取所有的 Fragment 生命周期回调。
-- 通过ReferenceQueue+WeakReference，来判断对象是否被回收
-    - WeakReference创建时，可以传入一个ReferenceQueue对象，假如WeakReference中引用对象被回收，那么就会把WeakReference对象添加到ReferenceQueue中，可以通过ReferenceQueue中是否为空来判断，被引用对象是否被回收
-- MessageQueue中加入一个IdleHandler来得到主线程空闲回调
-    - 这个知识点等之后写一篇Handler源码分析的时候在具体分析
-- 手动调用GC后还调用了System.runFinalization();，这个是强制调用已失去引用对象的finalize方法
-    - 在可达性算法中，不可达对象，也不是非死不可，这时他们处于“缓刑”阶段，要宣告一个对象真正死亡需要至少俩个标记阶段， 如果发现对象没有引用链，则会进行第一次标记，并进行一次筛选，筛选的条件是此对象是否有必要进行finalize（）方法，当对象没有覆盖finalize(),或者finalize（）已经调用过，这俩种都视为“没有必要执行”
-
-
-
-### 04.LeakCanary原理
+#### 2.2 原理流程概括
 - 如何触发检测
-    - 检测保留的实例 LeakCanary 是基于 LeakSentry 开发的，LeakSentry 会 hook Android 声明周期，并且会自动检测当 Activity 或 Fragment 被销毁时，它们的实例是否被回收了。 销毁的实例会传给 RefWatcher，RefWatcher 会持有它们的弱引用。 你也可以观察所有不再需要的实例，比如一个不再使用的 View，不再使用的 Presenter 等。 如果等待了 5 秒，并且 GC 触发了之后，弱引用还没有被清理，那么 RefWatcher 观察的实例就可能处于内存泄漏状态了。
+    - 检测保留的实例 LeakCanary 是基于 LeakSentry 开发的，LeakSentry 会 hook Android 声明周期，并且会自动检测当 Activity 或 Fragment 被销毁时，它们的实例是否被回收了。
+    - 销毁的实例会传给 RefWatcher，RefWatcher 会持有它们的弱引用。 你也可以观察所有不再需要的实例，比如一个不再使用的 View，不再使用的 Presenter 等。
+    - 如果等待了 5 秒，并且 GC 触发了之后，弱引用还没有被清理，那么 RefWatcher 观察的实例就可能处于内存泄漏状态了。
 - 判断是否存在内存泄漏
     - 首先尝试着从ReferenceQueue队列中获取待分析对象（软引用和弱引用可以和一个引用队列（ReferenceQueue）联合使用，如果软引用或弱引用所引用的对象被垃圾回收器回收，Java虚拟机就会把这个软引用或弱引用加入到与之关联的引用队列中），如果不为空，那么说明正在被系统回收。
     - 如果直接就返回DONE，说明已经被系统回收了。如果没有被系统回收，可能存在内存泄漏，手动触发系统GC，然后再尝试移除待分析对象。如果还存在，说明存在内存泄漏。
@@ -49,7 +69,20 @@
 
 
 
-### 06.install初始化操作
+#### 2.3 涉及知识点说明
+- 注册Activity的生命周期的监听器
+    - 通过Application.registerActivityLifecycleCallbacks()方法注册Activity的生命周期的监听器，每一个Activity的生命周期都会回调到这个ActivityLifecycleCallbacks上，如果一个Activity走到了onDestroy，那么就意味着他就不再存在，然后检测这个Activity是否是真的被销毁
+- 如何检测Fragment的生命周期的呢？
+    - FragmentManager 类提供了 registerFragmentLifecycleCallbacks 和 unregisterFragmentLifecycleCallbacks 方法用户注册和反注册 Fragment 的生命周期监听类，这样我们对每一个 Activity 进行注册，就能获取所有的 Fragment 生命周期回调。
+- 通过ReferenceQueue+WeakReference，来判断对象是否被回收
+    - WeakReference创建时，可以传入一个ReferenceQueue对象，假如WeakReference中引用对象被回收，那么就会把WeakReference对象添加到ReferenceQueue中，可以通过ReferenceQueue中是否为空来判断，被引用对象是否被回收
+- MessageQueue中加入一个IdleHandler来得到主线程空闲回调
+    - 这个知识点等之后写一篇Handler源码分析的时候在具体分析
+- 手动调用GC后还调用了System.runFinalization();，这个是强制调用已失去引用对象的finalize方法
+    - 在可达性算法中，不可达对象，也不是非死不可，这时他们处于“缓刑”阶段，要宣告一个对象真正死亡需要至少俩个标记阶段， 如果发现对象没有引用链，则会进行第一次标记，并进行一次筛选，筛选的条件是此对象是否有必要进行finalize（）方法，当对象没有覆盖finalize(),或者finalize（）已经调用过，这俩种都视为“没有必要执行”
+
+
+#### 2.4 install初始化
 - LeakCanary.install(this) 干了什么？LeakCanary 的 install 方法实际上构造了一个 RefWatcher,
     ``` java
     public static @NonNull RefWatcher install(@NonNull Application application) {
@@ -94,6 +127,7 @@
     }
     ```
     - 以上代码作用大部分都在代码中注释了，剩下 ActivityRefWatcher.install 和 FragmentRefWatcher.Helper.install 方法没有注释。下面我们就来具体看看这两个方法究竟干了什么。
+
 
 
 
