完善AMS和WMS笔记

--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -177,9 +177,9 @@
 
 3月15日周二
 VipKid       上午10点-12点，去公司过一二面
-小米造车       下午3点半-4点半
+小米造车       下午3点半-4点半，一面过
 极客邦        下午5点-6点，32k
-VipKid       晚上6点半，三面视频面试，33k
+VipKid       晚上6点半-7点半，三面视频面试，33k
 
 
 3月16日周三
