完善回到后台n时间杀死app案例

--- a/Read/ReadJavaWiki/05.Java异常/04.finally处理逻辑介绍.md
+++ b/Read/ReadJavaWiki/05.Java异常/04.finally处理逻辑介绍.md
@@ -1,14 +1,19 @@
 #### 目录介绍
 - 01.finally处理作用
 - 02.finally执行分析
+    - 2.1 finally一定会执行吗
+    - 2.2 验证finally执行
 - 03.finally和return
-
+    - 3.1 finally和return案例1
+    - 3.2 finally和return案例2
+    - 3.5 try块里的return一定执行吗
 
 
 
 
 ### 01.finally处理作用
-- 对于一些代码，可能希望无论是否抛出异常，这些代码都必须要执行。这通常包括内存回收之外的一些操作，因为内存回收是由垃圾回收器完成。为了达到这个效果，可以在catch块之后加上finally块。在finally块中处理这些代码。完整的异常处理如下：
+- 对于一些代码，可能希望无论是否抛出异常，这些代码都必须要执行。
+    - 这通常包括内存回收之外的一些操作，因为内存回收是由垃圾回收器完成。为了达到这个效果，可以在catch块之后加上finally块。在finally块中处理这些代码。完整的异常处理如下：
     ```
     try{
     	//---
@@ -43,7 +48,9 @@
 		}
 	}
     ```
-- 可以看到不管异常是否被抛出，finally字句都执行了。这个程序告诉我们，当程序发生了异常之后不能正确的回到原来的执行顺序上，我们可以在finally块中处理一些必要做的事情。比如打开文件的操作，当文件操作发生异常的时候，我们要确保文件被正确的关闭。
+- 可以看到不管异常是否被抛出，finally字句都执行了。
+    - 这个程序告诉我们，当程序发生了异常之后不能正确的回到原来的执行顺序上，我们可以在finally块中处理一些必要做的事情。
+    - 比如打开文件的操作，当文件操作发生异常的时候，我们要确保文件被正确的关闭。
 
 
 
@@ -53,17 +60,17 @@
 #### 2.1 finally一定会执行吗
 - finally是异常处理的统一出口，常用来实现资源释放，比如关闭文件，关于数据库连接等。不一定会被执行的。
 - **在以下4种特殊情况下，finally块不会被执行：**
-- 1.在finally语句块中发生了异常。
-- 2.在前面的代码中用了System.exit()退出程序。
-- 3.程序所在的线程死亡。
-- 4.关闭CPU。
+    - 1.在finally语句块中发生了异常。
+    - 2.在前面的代码中用了System.exit()退出程序。
+    - 3.程序所在的线程死亡。
+    - 4.关闭CPU。
 
 
 
 #### 2.2 验证finally执行
 - **至少有两种情况下finally语句是不会被执行的：**
-- **try语句没有被执行到，如在try语句之前就返回了，这样finally语句就不会执行，这也说明了finally语句被执行的必要而非充分条件是：相应的try语句一定被执行到。**
-- **在try块中有`System.exit(0);`这样的语句，`System.exit(0);`是终止Java虚拟机JVM的，连JVM都停止了，所有都结束了，当然finally语句也不会被执行到。**
+    - **try语句没有被执行到，如在try语句之前就返回了，这样finally语句就不会执行，这也说明了finally语句被执行的必要而非充分条件是：相应的try语句一定被执行到。**
+    - **在try块中有`System.exit(0);`这样的语句，`System.exit(0);`是终止Java虚拟机JVM的，连JVM都停止了，所有都结束了，当然finally语句也不会被执行到。**
 
 
 
