--- a/Read/ReadJavaWiki/05.Java异常/05.异常try-catch性能.md
+++ b/Read/ReadJavaWiki/05.Java异常/05.异常try-catch性能.md
@@ -1,21 +1,16 @@
 #### 目录介绍
-- 01.思考问题
+- 01.思考一个问题
 - 02.先看一个实验
 - 03.异常处理耗时测试
 - 04.try…catch在for循环外面或者里面
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
 
 
-
-### 01.思考问题
+### 01.思考一个问题
 - try..catch..到底影响性能吗？
     - 如果没有出现异常不影响，如果频繁出现异常则是影响性能的。
 - 从性能角度来审视一下 Java 的异常处理机制，这里有两个可能会相对昂贵的地方：
-    - try-catch 代码段会产生额外的性能开销，或者换个角度说，它往往会影响 JVM 对代码进行优化，所以建议仅捕获有必要的代码段，尽量不要一个大的 try 包住整段的代码；与此同时，利用异常控制代码流程，也不是一个好主意，远比我们通常意义上的条件语句（if/else、switch）要低效。
+    - try-catch 代码段会产生额外的性能开销，或者换个角度说，它往往会影响 JVM 对代码进行优化，所以建议仅捕获有必要的代码段。尽量不要一个大的 try 包住整段的代码；与此同时，利用异常控制代码流程，也不是一个好主意，远比我们通常意义上的条件语句（if/else、switch）要低效。
     - Java 每实例化一个 Exception，都会对当时的栈进行快照，这是一个相对比较重的操作。如果发生的非常频繁，这个开销可就不能被忽略了。
 
 
@@ -189,7 +184,7 @@
     46820     48708 54749  47953   46820  45310
     ```
 - 看一下字节码指令过程
-    ```java
+    ``` java
       public static void main(java.lang.String[]);
         descriptor: ([Ljava/lang/String;)V
         flags: (0x0009) ACC_PUBLIC, ACC_STATIC
@@ -252,7 +247,7 @@
     42289  47953  49463  45688  45310
     ```
 - 看一下字节码指令过程
-    ```java
+    ``` java
       public static void main(java.lang.String[]);
         descriptor: ([Ljava/lang/String;)V
         flags: (0x0009) ACC_PUBLIC, ACC_STATIC
@@ -289,9 +284,13 @@
                 25    27    25   any
     ```
 
+
 #### 4.3 得出结论
-- **综合实验，我们发现无论从运行时长还是从字节码指令的角度看，它两的性能可以说是一样的。并没有你感觉到的for循环里放try代码会冗余、资源消耗加倍的问题。**
-- 但是从运行逻辑来看，两个是有点不同的，实验三中，因为for在try catch里，所以jvm在编译的时候，把异常处理放在for循环后面才进行。即：`第24-27行`；实验四中，异常处理是在for循环内部的，即：`第18-22行`。大同小异。
+- **综合实验，我们发现无论从运行时长还是从字节码指令的角度看，它两的性能可以说是一样的。
+    - 并没有你感觉到的for循环里放try代码会冗余、资源消耗加倍的问题。**
+- 但是从运行逻辑来看，两个是有点不同的
+    - 实验三中，因为for在try catch里，所以jvm在编译的时候，把异常处理放在for循环后面才进行。即：`第24-27行`；
+    - 实验四中，异常处理是在for循环内部的，即：`第18-22行`。大同小异。
 
 
 
