--- a/Read/ReadJavaWiki/09.反射知识/06.JVM实现反射细节.md
+++ b/Read/ReadJavaWiki/09.反射知识/06.JVM实现反射细节.md
@@ -16,11 +16,10 @@
 
 ### 02.反射调用的实现
 - 首先，我们来看看方法的反射调用，也就是Method.invoke，是怎么实现的。
-    ```java
+    ``` java
     public final class Method extends Executable{
-        ...
         public Object invoke(Object obj, Object... args) throws ...{
-            ... // 权限检查
+            // 权限检查
             MethodAccessor ma = methodAccessor;
             if(ma == null){
                 ma = acquireMethodAccessor();
