--- a/Read/ReadJavaWiki/12.Java深入/02.四种引用分析比较.md
+++ b/Read/ReadJavaWiki/12.Java深入/02.四种引用分析比较.md
@@ -10,6 +10,7 @@
     - 2.4 虚引用场景
     - 2.5 四种引用比较
 - 03.引用原理说明
+    - 3.0 引用回收的流程 
     - 3.1 看看Reference的源代码
     - 3.2 看看ReferenceQueue的enqueue函数
     - 3.3 看看ReferenceQueue的enqueueLocked(Reference)函数
@@ -158,6 +159,10 @@
 
 
 ### 03.引用原理说明
+#### 3.0 引用回收的流程 
+- 带完善
+
+
 #### 3.1 看看Reference的源代码
 - 源码说明：
     - 看到Reference除了带有对象引用referent的构造函数，还有一个带有ReferenceQueue参数的构造函数。那么这个ReferenceQueue用来做什么呢？
