--- a/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
+++ b/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
@@ -75,6 +75,8 @@
 - 【异常捕获】try {}里有一个 return 语句，那么紧跟在这个 try 后的 finally {}里的code会不会被执行，什么时候被执行，在 return 前还是后?
 
 
+
+
 #### 1.6 多线程
 - 【多线程】多线程具有什么优点和缺点？为什么说开启大量的线程,会降低程序的性能，那么该如何做才能降低性能？
 
@@ -194,10 +196,21 @@
 
 
 
+- 【帧缓存】平常有做过那些UI优化，知道帧缓存吗，说下对SurfaceFlinger理解
+- 【glide】如何做一个加载进度的需求，glide可以实现吗？原理大概是什么样的？
+- 【302】webView如何做重定向优化的，js交互注意事项有哪些？
 
 
 
 
+- 【异常性能】try..catch..到底影响性能吗？从jvm层面分析下。在try-catch中for循环和在for循环中try-catch有何区别，性能损耗如何？
+- 【线程】ThreadLocal作用是什么，平常怎么用它，线程为何需要这个东西，里面的副本是怎么拷贝的？
+- 【反射】反射为何损耗性能，从jvm层面说一下你的看法？
+- 【内存】说一下创建对象后，对象的内存布局，平常用到的锁，在内存对象布局哪里，怎么去判断对象中某个方法是否有锁
+- 【开放题】如何去实现app切换到后台1小时自动杀死进程方案，该怎么做
+- 【手写代码】写一下生产者和消费者模型代码，一对一，一对多，然后运行代码，10分钟
+- 【wms】如果让你实现一个桌面级悬浮窗，你该怎么设计，从WMS层面思考如何view是如何加载到窗口上的
+- 【消息机制】说一下什么场景会出现消息队列阻塞，发送消息很多时该如何优化，异步消息会阻塞线程吗
 
 
 
