--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -167,19 +167,19 @@
 3月11日周五
 畅游          下午3点-4点，一面过
 极客邦        下午5点-6点，一面过
-             下午6点-7点，二面过，三面去公司
+             下午6点-7点，二面过期望35k【boss标记20-35】，三面去公司
 
 3月14日周一
 作业帮        下午3点-4点，一面过
 最右          下午5点-6点，一面过
-畅游          晚上7点半-8点半，二面等消息
+畅游          晚上7点半-8点半，二面等消息，估计没戏
 
 
 3月15日周二
 VipKid       上午10点-12点，去公司过一二面
 小米造车       下午3点半-4点半，一面过
-极客邦        下午5点-6点，32k
-VipKid       晚上6点半-7点半，三面视频面试，33k
+极客邦        下午5点-6点，砍到30k，需要快速上手jitpack
+VipKid       晚上6点半-7点半，三面视频面试，33k，等消息
 
 
 3月16日周三
@@ -199,6 +199,7 @@ APUS          上午10点-11点
 好未来        上午10点-12点
 
 
+过了两家：作业帮，极客邦，
 
 
 
