--- a/Read/ReadJavaWiki/09.反射知识/02.反射实际开发使用.md
+++ b/Read/ReadJavaWiki/09.反射知识/02.反射实际开发使用.md
@@ -14,6 +14,26 @@
 - 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
 
 
+
+
+
+### 03.Java反射的应用
+- Java反射的应用
+    - 1.逆向代码 ，例如反编译
+    - 2.与注解相结合的框架 例如Retrofit
+    - 3.单纯的反射机制应用框架 例如EventBus
+    - 4.动态生成类框架 例如Gson
+- 反射的作用有哪些
+    - 前面只是说了反射是一种具有与Java类进行动态交互能力的一种机制，在Java和Android开发中，一般情况下下面几种场景会用到反射机制.
+        - 需要访问隐藏属性或者调用方法改变程序原来的逻辑，这个在开发中很常见的，由于一些原因，系统并没有开放一些接口出来，这个时候利用反射是一个有效的解决方法
+        - 自定义注解，注解就是在运行时利用反射机制来获取的。
+        - 在开发中动态加载类，比如在Android中的动态加载解决65k问题等等，模块化和插件化都离不开反射，离开了反射寸步难行。
+- 反射的用途
+    - 官方解释：反射被广泛地用于那些需要在运行时检测或修改程序行为的程序中。这是一个相对高级的特性，只有那些语言基础非常扎实的开发者才应该使用它。如果能把这句警示时刻放在心里，那么反射机制就会成为一项强大的技术，可以让应用程序做一些几乎不可能做到的事情。
+
+
+
+
 - Class.forName() 和ClassLoader.loadClass()区别？
     - 问到的是反射，但是在底层涉及到了虚拟机的类加载知识。
     - Class.forName() 默认执行类加载过程中的连接与初始化动作，一旦执行初始化动作，静态变量就会被初始化为程序员设置的值，如果有静态代码块，静态代码块也会被执行
